test/fail_compilation/imports/test313a.d
module imports.test313a;

// explicit private no longer needed but added for clarity
private import std.stdio;
